# smart_learning

./: README.md
VideoPose3D/: data.txt  smart_learning.py
VideoPose3D/data/: dance_1.mp4.npz  data_2d_custom_myvideos.npz
VideoPose3D/skeleton2angles/: CMakeLists.txt  imitation.h  imitation_new.cpp  main.cpp  s2a.cpp  s2a.h  ske2ang.cpp  ske2ang.h  test.py
